# jalopy

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  app.py  cli.py  config.ini  db.py  jalopy.db.bak  jalopy.db.old  main.py  notes.md  pyproject.toml  requirements.txt  setup.py  utils.py
db/: base_item.py  dbclient.py  record.py  records.py  vehicle.py  vehicles.py
entities/: __init__.py  base_entity.py  entity_manager.py  entity_type.py  fuel_type.py  record.py  record_type.py  vehicle.py
jalopy/: plots.py  utils.py
jalopy/db/: base_item.py  dbclient.py  record.py  vehicle.py
jalopy/entities/: base_entity.py  entity_manager.py  entity_type.py  fuel_type.py  record.py  record_type.py  vehicle.py
jalopy/ui/: __init__.py  base_ui.py  cli.py  gui.py
scripts/: run_jalopy.sh
ui/: base_ui.py  cli.py  gui.py
