[tool.poetry]
name = "jalopy"
version = "1.0.0"
description = "Fuel economy and maintenance tracker"
authors = ["Robin Tregaskis <lokidokicoki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplot = "^0.1.9"
PyGObject = "^3.42.0"
inquirer = "^3.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
commitizen = "^2.21.2"
data-science-types = "^0.2.23"
black = "^23.3.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "5.0.1"
tag_format = "v$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
