[tool.poetry]
name = "jalopy"
version = "5.0.2"
description = "Fuel economy and maintenance tracker"
authors = ["Robin Tregaskis <lokidokicoki@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
matplot = "^0.1.9"
PyGObject = "^3.42.0"
inquirer = "^3.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
commitizen = "^3.12.0"
data-science-types = "^0.2.23"
black = "^23.11.0"


[tool.black]
line-length=88

[tool.commitizen]
name = "cz_conventional_commits"
version = "5.0.2"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
